# ROS2_with_python

./: README.md
bumpgo/: package.xml  setup.cfg  setup.py
bumpgo/bumpgo/: bump_go.py  bump_go_2.py  bump_go_3.py
bumpgo/launch/: bump_go.launch.py  bump_go_2.launch.py  bump_go_3.launch.py
my_robot/install/: local_setup.sh  setup.sh
my_robot/install/my_robot/share/my_robot/: launch_sim.launch.py  package.sh
my_robot/launch/: launch_ign.launch.py  launch_sim.launch.py
my_robot/log/: latest_build
object_detection/: package.xml  setup.py
object_detection/install/: local_setup.sh  setup.sh
object_detection/install/object_detection/lib/object_detection/: obstacle_detector  obstacle_detector_2  obstacle_monitor
object_detection/install/object_detection/share/object_detection/: package.sh
object_detection/install/object_detection/share/object_detection/launch/: detector_2.launch.py
object_detection/launch/: detector.launch.py
object_detection/log/: latest_build
object_detection/object_detection/: obstacle_detector.py  obstacle_detector_2.py  obstacle_monitor.py
vff_avoiding/: package.xml  setup.cfg  setup.py
vff_avoiding/launch/: vff.launch.py
vff_avoiding/vff_avoiding/: vff_avoiding.py
