<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vff_avoiding</name>
  <version>0.0.0</version>
  <description>A vff model for avoiding objects</description>
  <maintainer email="angeloob11@gmail.com">angel</maintainer>
  <license>Apache licence 2.0</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>python3-numpy</depend>
  <depend>tf2_ros_py</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
